--- a/composer.json
+++ b/composer.json
@@ -22,8 +22,8 @@
         "maksyutin/yii2-dual-list-box": "dev-master",
         "wbraganca/yii2-dynamicform": "*",
         "kartik-v/yii2-widget-select2": "*",
-	"kartik-v/yii2-export": "@dev",
-	"phpoffice/phpexcel": "dev-develop"
+        "phpoffice/phpexcel": "^1.8",
+        "moonlandsoft/yii2-phpexcel": "*"
     },
     "require-dev": {
         "yiisoft/yii2-codeception": "*",
