--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "yiisoft/yii2-bootstrap": "*",
         "yiisoft/yii2-swiftmailer": "*",
         "yiisoft/yii2-jui": "^2.0",
+        "fxp/composer-asset-plugin": "~1.0",
         "maksyutin/yii2-dual-list-box": "dev-master",
         "wbraganca/yii2-dynamicform": "*",
         "kartik-v/yii2-widget-select2": "*",
